--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <a href="https://www.linkedin.com/in/daniel-cruz-cv"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
               <a href="https://www.wattpad.com/user/Pokedann"><img src="img/watt4.png" class="watt"></a>
               <div>
-                <button type="button" class="btn btn-primary contratame">CONTRÁTAME</button>
+                <button type="button" class="btn btn-primary contratame" id="btnContra">CONTRÁTAME</button>
               </div>
             </div>
         </div>
@@ -109,8 +109,8 @@
             <p class="text-justify">En el diario laborar es importante el cliente con el cual estoy involucrado a nivel social e institucional, tengo ideas claras con respecto a mis objetivos, habilidades y áreas de oportunidad.</p>
           </div>
           <div class="col-sm-12">
-              <button class="contratame btnCV" data-toggle="modal" data-target=".bs-example-modal-lg"><a>VER CV</a></button>
-              <button class="contratame btnCV bot2"><a href="docs/CVJosueCruz.pdf" download="docs/CVJosueCruz.pdf">DESCARGAR CV</a></button>
+              <button class="contratame btnCV bot1" data-toggle="modal" data-target=".bs-example-modal-lg"><a>VER CV</a></button>
+              <button class="contratame btnCV bot2"><a class="blanco" href="docs/CVJosueCruz.pdf" download="docs/CVJosueCruz.pdf">DESCARGAR CV</a></button>
           </div>
           </div>
         </div>
@@ -200,57 +200,57 @@
             <h2 class="text-center perfilTitle">MIS SUPERPODERES</h2>
             <hr class="style-three">
           </div>
-          <div class="col-sm-2 col-xs-6">
+          <div class="col-md-2 col-sm-3">
               <h4 class="">HTML5</h4>
               <div class="test-circle">
               </div>
           </div>
-          <div class="col-sm-2 col-xs-6">
+          <div class="col-md-2 col-sm-3">
               <h4 class="">CSS</h4>
               <div class="test-circle1">
               </div>
           </div>
-          <div class="col-sm-2 col-xs-6">
+          <div class="col-md-2 col-sm-3">
               <h4 class="">PHP</h4>
               <div class="test-circle2">
               </div>
           </div>
-          <div class="col-sm-2 col-xs-6">
+          <div class="col-md-2 col-sm-3">
               <h4 class="">JAVASCRIPT</h4>
               <div class="test-circle3">
               </div>
           </div>
-          <div class="col-sm-2 col-xs-6">
+          <div class="col-md-2 col-sm-3">
               <h4 class="">MySQL</h4>
               <div class="test-circle4">
               </div>
           </div>
-          <div class="col-sm-2 col-xs-6">
+          <div class="col-md-2 col-sm-3">
               <h4 class="">GIT</h4>
               <div class="test-circle5">
               </div>
           </div>
-          <div class="col-sm-2 col-xs-6">
+          <div class="col-md-2 col-sm-3">
               <h4 class="">NODEJS</h4>
               <div class="test-circle6">
               </div>
           </div>
-          <div class="col-sm-2 col-xs-6">
+          <div class="col-md-2 col-sm-3">
               <h4 class="">BOOTSTRAP</h4>
               <div class="test-circle7">
               </div>
           </div>
-          <div class="col-sm-2 col-xs-6">
+          <div class="col-md-2 col-sm-3">
               <h4 class="">ANGULARJS</h4>
               <div class="test-circle8">
               </div>
           </div>
-          <div class="col-sm-2 col-xs-6">
+          <div class="col-md-2 col-sm-3">
               <h4 class="">WORDPRESS</h4>
               <div class="test-circle9">
               </div>
           </div>
-          <div class="col-sm-2 col-xs-6">
+          <div class="col-md-2 col-sm-3">
               <h4 class="">PHOTOSHOP</h4>
               <div class="test-circle10">
               </div>
@@ -279,34 +279,34 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <div class="row">
-                <div class="col-sm-4 marBot">
+                <div class="col-sm-4 col-xs-6 marBot">
                   <img class="d-block w-100" src="img/autoefectivo.png" alt="First slide">
                   <h2 class="itemTitle">AUTOEFECTIVO</h2>
                   <a href="myprojects/landingAuto/index.html"><button class="btn btn-outline-primary">Ver más</button></a>
                 </div>
-                <div class="col-sm-4 marBot">
+                <div class="col-sm-4 col-xs-6 marBot">
                   <img class="d-block w-100" src="img/marcavidas.png" alt="First slide">
                   <h2 class="itemTitle">MARCAVIDAS</h2>
                   <a href="myprojects/marcavidas2/index.html"><button class="btn btn-outline-primary">Ver más</button></a>
                 </div>
-                <div class="col-sm-4 marBot">
+                <div class="col-sm-4 col-xs-6 marBot">
                   <img class="d-block w-100" src="img/autoefectivo.png" alt="First slide">
                   <h2 class="itemTitle">EXITO INMOBILIARIO</h2>
                   <a href="myprojects/landingAuto/index.html"><button class="btn btn-outline-primary">Ver más</button></a>
                 </div>
               </div>
               <div class="row">
-                <div class="col-sm-4 marBot">
+                <div class="col-sm-4 col-xs-6 marBot">
                   <img class="d-block w-100" src="img/mailingExito.png" alt="First slide">
                   <h2 class="itemTitle">MAILING EXITO INMOBILIARIO</h2>
                   <a href="myprojects/mailRemarketing/MailRemarketing.html"><button class="btn btn-outline-primary">Ver más</button></a>
                 </div>
-                <div class="col-sm-4 marBot">
+                <div class="col-sm-4 col-xs-6 marBot">
                   <img class="d-block w-100" src="img/MailingGrandPark.png" alt="First slide">
                   <h2 class="itemTitle">MAILING GRAND PARK</h2>
                   <a href="myprojects/GrandPark mailing/index.html"><button class="btn btn-outline-primary">Ver más</button></a>
                 </div>
-                <div class="col-sm-4 marBot">
+                <div class="col-sm-4 col-xs-6 marBot">
                   <img class="d-block w-100" src="img/GrandPartner.png" alt="First slide">
                   <h2 class="itemTitle">MAILING GRAND PARTNER</h2>
                   <a href="myprojects/GrandPartner/index.html"><button class="btn btn-outline-primary">Ver más</button></a>
@@ -315,29 +315,29 @@
             </div>
             <div class="carousel-item">
               <div class="row">
-                <div class="col-sm-4 marBot">
+                <div class="col-sm-4 col-xs-6 marBot">
                   <img class="d-block w-100" src="img/noba.png" alt="First slide">
                   <h2 class="itemTitle">NOBA</h2>
                   <a href="myprojects/Nobacombinado/index.php"><button class="btn btn-outline-primary">Ver más</button></a>
                 </div>
-                <div class="col-sm-4 marBot">
+                <div class="col-sm-4 col-xs-6 marBot">
                   <img class="d-block w-100" src="img/blefa.png" alt="First slide">
                   <h2 class="itemTitle">BLEFAROPLASTÍA</h2>
                   <a href="myprojects/carpeta94_LpPlastic_blefaroplastia/index.html"><button class="btn btn-outline-primary">Ver más</button></a>
                 </div>
-                <div class="col-sm-4 marBot">
+                <div class="col-sm-4 col-xs-6 marBot">
                   <img class="d-block w-100" src="img/pina.png" alt="First slide">
                   <h2 class="itemTitle">PINA JARQUIN</h2>
                   <a href="myprojects/carpeta109_LpPinaTarquin/index.html"><button class="btn btn-outline-primary">Ver más</button></a>
                 </div>
               </div>
               <div class="row">
-                <div class="col-sm-4 marBot">
+                <div class="col-sm-4 col-xs-6 marBot">
                   <img class="d-block w-100" src="img/hausKeeper.png" alt="First slide">
                   <h2 class="itemTitle">HAUSKEEPER</h2>
                   <a href="http://hauskeeper.esy.es/login"><button class="btn btn-outline-primary">Ver más</button></a>
                 </div>
-                <div class="col-sm-4 marBot">
+                <div class="col-sm-4 col-xs-6 marBot">
                   <img class="d-block w-100" src="img/MenuLomalinda.png" alt="First slide">
                   <h2 class="itemTitle">MENU LOMALINDA</h2>
                   <a href="myprojects/lomalindaMenuAng/public/index.html"><button class="btn btn-outline-primary">Ver más</button></a>
@@ -590,14 +590,14 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-6">
-            <p class="puedes">Puedes contactarme por medio de las siguientes redes sociales:</p>
+          <div class="col-md-6 col-sm-12 centro">
+            <p class="puedes izq">Puedes contactarme por medio de las siguientes redes sociales:</p>
             <img src="img/whats.png" class="redes"> 55-49-38-88-15 <br><br>
             <img src="img/gmail.png" class="redes"><a class="blanco" href="cruzmmh@gmail.com"> cruzmmh@gmail.com</a> <br><br>
-            <img src="img/facebook.png" class="redes"><a class="blanco" href="https://www.facebook.com/DanielCruzCV/"> https://www.facebook.com/DanielCruzCV/</a> <br><br>
-            <img src="img/linkedin.png" class="redes"><a class="blanco" href="https://www.linkedin.com/in/daniel-cruz-cv"> https://www.linkedin.com/in/daniel-cruz-cv</a> <br><br>
+            <img src="img/facebook.png" class="redes"><a class="blanco mobile" href="https://www.facebook.com/DanielCruzCV/"> https://www.facebook.com/DanielCruzCV/</a> <br><br>
+            <img src="img/linkedin.png" class="redes"><a class="blanco mobile" href="https://www.linkedin.com/in/daniel-cruz-cv"> https://www.linkedin.com/in/daniel-cruz-cv</a> <br><br>
           </div>
-          <div class="col-sm-6">
+          <div class="col-md-6 col-sm-12">
             <div class="row header">
               <p class="puedes">O puedes enviarme un mensaje directo llenando el siguiente formulario:</p>
             </div>
