letter spacing y ortografia
se le dio letter spacing a algunas cosas y se reviso la ortografia

--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
               <h3>ESCOLARIDAD</h3>
               <ul class="listaExp">
                 <li>
-                  <h5>Instituto Tecnologico Gustavo A. Madero</h5>
-                  <p>Ingenieria en Tecnologias de la Información y Comunicaciones</p>
+                  <h5>Instituto Tecnológico Gustavo A. Madero</h5>
+                  <p>Ingeniería en Tecnologías de la Información y Comunicaciones</p>
                   <p>2011 - 2016</p>
                 </li>
                 <li>
@@ -291,14 +291,14 @@
                 </div>
                 <div class="col-sm-4 col-xs-6 marBot">
                   <img class="d-block w-100" src="img/autoefectivo.png" alt="First slide">
-                  <h2 class="itemTitle">EXITO INMOBILIARIO</h2>
+                  <h2 class="itemTitle">ÉXITO INMOBILIARIO</h2>
                   <a href="myprojects/landingAuto/index.html"><button class="btn btn-outline-primary">Ver más</button></a>
                 </div>
               </div>
               <div class="row">
                 <div class="col-sm-4 col-xs-6 marBot">
                   <img class="d-block w-100" src="img/mailingExito.png" alt="First slide">
-                  <h2 class="itemTitle">MAILING EXITO INMOBILIARIO</h2>
+                  <h2 class="itemTitle">MAILING ÉXITO INMOBILIARIO</h2>
                   <a href="myprojects/mailRemarketing/MailRemarketing.html"><button class="btn btn-outline-primary">Ver más</button></a>
                 </div>
                 <div class="col-sm-4 col-xs-6 marBot">
@@ -339,7 +339,7 @@
                 </div>
                 <div class="col-sm-4 col-xs-6 marBot">
                   <img class="d-block w-100" src="img/MenuLomalinda.png" alt="First slide">
-                  <h2 class="itemTitle">MENU LOMALINDA</h2>
+                  <h2 class="itemTitle">MENÚ LOMALINDA</h2>
                   <a href="myprojects/lomalindaMenuAng/public/index.html"><button class="btn btn-outline-primary">Ver más</button></a>
                 </div>
                 <!-- <div class="col-sm-4 marBot">
@@ -428,8 +428,8 @@
               <div class="row">
                 <div class="col-sm-4 marBot">
                   <img class="d-block w-100" src="img/validacion.png" alt="First slide">
-                  <h2 class="itemTitle">Form validacion campos vacios</h2>
-                  <p class="itemPar">Formulario de validacion de campos vacios con Json utilizando RedBeansPHP</p>
+                  <h2 class="itemTitle">Form validación campos vacíos</h2>
+                  <p class="itemPar">Formulario de validación de campos vacíos con Json utilizando RedBeansPHP</p>
                   <a href="myprojects/form validation campos vacios con json/index.php"><button class="btn btn-outline-primary">Ver más</button></a>
                 </div>
                 <div class="col-sm-4 marBot">
@@ -586,7 +586,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
-            <h2 class="perfilTitle text-center contra">¡CONTRATAME!</h2>
+            <h2 class="perfilTitle text-center contra">¡CONTRÁTAME!</h2>
           </div>
         </div>
         <div class="row">
